--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
   ],
     "compilerOptions": {
       "target": "es5",
-      "module": "commonjs",
+      "module": "CommonJS",
       "noImplicitAny": true,
       "strictNullChecks": true,
       "strict": true
